# SymoCraft

./: CMakeLists.txt  README.md
assets/configs/: blockFormats.yaml
assets/shaders/: fs_BlockShader.glsl  fs_FrameShader.glsl  vs_BlockShader.glsl  vs_FrameShader.glsl
assets/textures/: texture_atlas.psd
include/: Core.h  core.h
include/Camera/: Camera.h
include/Core/: GlobalThreadPool.h  Window.h  application.h  global_thread_pool.h
include/Input/: input.h  key_bindings.h  key_handler.h
include/MemoryAllocator/: AmoBase.cpp  AmoBase.h  AmoMemoryBase.cpp  AmoMemoryBase.h  MemoryHelper.h  RawMemory.h
include/camera/: camera.h
include/core/: application.h  constants.h  pool.h  pool.hpp  utils.h  window.h
include/core/ECS/: component.h  component_container.h  entity_component_system.h  family_type_id.h  internal.h  registry.h
include/core/ECS/Systems/: character_system.h  physics_system.h  transform_system.h
include/event/: event.h
include/input/: input.h  key_bindings.h
include/playercontroller/: playercontroller.h
include/renderer/: batch.hpp  block.h  camera.h  renderer.h  shader.h  shaderProgram.h  shader_program.h  texture.h
include/world/: block.h  chunk.h  chunk_manager.h  world.h
src/: main.cpp
src/Camera/: Camera.cpp
src/Core/: GlobalThreadPool.cpp  Window.cpp  application.cpp
src/Input/: input.cpp  key_bindings.cpp  key_handler.cpp
src/MemoryAllocator/: MemoryAllocator.cpp
src/camera/: Camera.cpp
src/core/: application.cpp  global_thread_pool.cpp
src/core/ECS/: family_type_id.cpp  internal.cpp  registry.cpp
src/core/ECS/Systems/: character_system.cpp  physics_system.cpp  transform_system.cpp
src/event/: event.cpp
src/input/: input.cpp  key_handler.cpp
src/playercontroller/: playercontroller.cpp
src/renderer/: block.cpp  camera.cpp  renderer.cpp  shader.cpp  shaderProgram.cpp  shader_program.cpp  texture.cpp
src/world/: block.cpp  chunk.cpp  chunk_manager.cpp  world.cpp
